--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -28,7 +28,7 @@
                 <p><b><a href="https://github.com/buckaroo-it/Magento2/tree/<?= $block->escapeHtml($block->getLatestPluginVersion()); ?>"><?= $block->escapeHtml($block->getLatestPluginVersion()); ?></a></b></p>
             </div>
             <div class="bk-flex-basis-33">
-                <a href="https://github.com/buckaroo-it/Magento2#upgrade" target="_blank" class="bk-btn bk-ml-10px"><?= $block->escapeHtml(__('How to update?'));?></a>
+                <a href="https://github.com/buckaroo-it/Magento2#upgrade" target="_blank" rel="noopener" class="bk-btn bk-ml-10px"><?= $block->escapeHtml(__('How to update?'));?></a>
             </div>
         </div>
     </div>
@@ -70,15 +70,15 @@
     <hr class="bk-hr-line">
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Documentation:'));?></h3>
     <div class="bk-flex bk-mb-5px">
-        <a href="https://docs.buckaroo.io/docs/magento-2" target="_blank" class="bk-btn">
+        <a href="https://docs.buckaroo.io/docs/magento-2" target="_blank" rel="noopener" class="bk-btn">
             <?= $block->escapeHtml(__('Magento Documentation'));?>
         </a>
 
-        <a href="https://github.com/buckaroo-it/Magento2" target="_blank" class="bk-btn bk-ml-10px">
+        <a href="https://github.com/buckaroo-it/Magento2" target="_blank" rel="noopener" class="bk-btn bk-ml-10px">
             <?= $block->escapeHtml(__('Github'));?>
         </a>
 
-        <a href="https://docs.buckaroo.io/v1/docs/magento-2-releases" target="_blank" class="bk-btn bk-ml-10px">
+        <a href="https://docs.buckaroo.io/v1/docs/magento-2-releases" target="_blank" rel="noopener" class="bk-btn bk-ml-10px">
             <?= $block->escapeHtml(__('Changelog'));?>
         </a>
     </div>
@@ -88,26 +88,26 @@
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Additional plugins:'));?></h3>
     <div class="bk-flex bk-mb-5px bk-flex-wrap">
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
-            <a href="https://github.com/buckaroo-it/Magento2_SecondChance" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+            <a href="https://github.com/buckaroo-it/Magento2_SecondChance" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
                 <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/68ba0c08-1162-44c6-a18a-8734692b8b02" alt="<?= $block->escapeHtml('Second chance module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('The Second Chance module makes it possible to follow up unpaid orders with one or two reminder emails. This extension to the Buckaroo Payment module ensures a higher conversion rate.'));?></p>
         </div>
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
 
-            <a href="https://docs.buckaroo.io/docs/hyva-react-checkout-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+            <a href="https://docs.buckaroo.io/docs/hyva-react-checkout-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
                 <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/11953f16-3f5d-4c10-bb6b-f9a949a97a7a" alt="<?= $block->escapeHtml('Hyvä React Checkout module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Hyvä offers the best performance and user experience, without the cost and overhead of a PWA.'));?></p>
         </div>
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
-            <a href="https://docs.buckaroo.io/docs/graphql-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+            <a href="https://docs.buckaroo.io/docs/graphql-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
                 <img src="https://github.com/buckaroo-it/Magento2/assets/105488705/8611dfeb-bb84-4ba6-ab72-7b6459143dff" alt="<?= $block->escapeHtml('GraphQL');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Buckaroo GraphQL module adds GraphQL to provide an alternative to REST and SOAP web APIs for frontend development.'));?></p>
         </div>
         <div class="bk-flex bk-mb-5px bk-plugin-zone-wrap">
-            <a href="https://docs.buckaroo.io/v1/docs/google-analytics-module" target="_blank" class="bk-plugin-zone bk-flex-basis-50">
+            <a href="https://docs.buckaroo.io/v1/docs/google-analytics-module" target="_blank" rel="noopener" class="bk-plugin-zone bk-flex-basis-50">
                 <img src="https://www.buckaroo.nl/media/3478/magento2_googleanalytics_icon.png" alt="<?= $block->escapeHtml('Analytics module');?>">
             </a>
             <p class="bk-flex-basis-50"><?= $block->escapeHtml(__('Improves tracking allocation across various devices and browsers'));?></p>
@@ -118,7 +118,7 @@
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Account:'));?></h3>
     <p class="bk-mb-5px"><?= $block->escapeHtml(__('No Buckaroo account yet? No problem. Click on the attached button to sign up for a (live) account.
 '));?></p>
-    <a href="https://www.buckaroo.nl/start" target="_blank" class="bk-btn">
+    <a href="https://www.buckaroo.nl/start" target="_blank" rel="noopener" class="bk-btn">
         <?= $block->escapeHtml(__('Get account'));?>
     </a>
 
@@ -135,7 +135,7 @@
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Contribute:'));?></h3>
     <p class="bk-mb-5px"><?= $block->escapeHtml(__('Do you see room for improvement? We look forward to your input! Via Github you can submit a feature request or submit a pull request yourself with your proposed adjustments.'));?></p>
 
-    <a href="https://github.com/buckaroo-it/Magento2/blob/master/CONTRIBUTING.md" target="_blank" class="bk-btn">
+    <a href="https://github.com/buckaroo-it/Magento2/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener" class="bk-btn">
         <?= $block->escapeHtml(__('Contribute'));?>
     </a>
 </div>
